# fastdev

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json  example_app.py  usage_examples.md
src/fastdev/: __init__.py  cli.py  server.py
src/fastdev/analysis/: __init__.py  code_analyzer.py
src/fastdev/core/: __init__.py  port_manager.py  process_monitor.py  server_manager.py
tests/: __init__.py  test_port_manager.py
